Interpreter/parser_py/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> CLASS semi
Rule 2     PROGRAM -> PROGRAM CLASS semi
Rule 3     CLASS -> class type inherits type lbrace FEATUREPLUS rbrace
Rule 4     CLASS -> class type inherits type lbrace rbrace
Rule 5     CLASS -> class type lbrace FEATUREPLUS rbrace
Rule 6     CLASS -> class type lbrace rbrace
Rule 7     FEATURE -> identifier lparen FORMALPLUS rparen colon type lbrace EXPR rbrace
Rule 8     FEATURE -> identifier lparen rparen colon type lbrace EXPR rbrace
Rule 9     FEATURE -> identifier colon type
Rule 10    FEATURE -> identifier colon type larrow EXPR
Rule 11    FORMAL -> identifier colon type
Rule 12    EXPR -> identifier larrow EXPR
Rule 13    EXPR -> EXPR at type dot identifier lparen EXPRPLUS rparen
Rule 14    EXPR -> EXPR at type dot identifier lparen rparen
Rule 15    EXPR -> EXPR dot identifier lparen EXPRPLUS rparen
Rule 16    EXPR -> EXPR dot identifier lparen rparen
Rule 17    EXPR -> identifier lparen EXPRPLUS rparen
Rule 18    EXPR -> identifier lparen rparen
Rule 19    EXPR -> if EXPR then EXPR else EXPR fi
Rule 20    EXPR -> while EXPR loop EXPR pool
Rule 21    EXPR -> lbrace EXPRSEMIPLUS rbrace
Rule 22    EXPR -> let identifier colon type larrow EXPR IDTYPEEXPRPLUS in EXPR
Rule 23    EXPR -> let identifier colon type larrow EXPR in EXPR
Rule 24    EXPR -> let identifier colon type IDTYPEEXPRPLUS in EXPR
Rule 25    EXPR -> let identifier colon type in EXPR
Rule 26    EXPR -> case EXPR of IDTYPEARROWPLUS esac
Rule 27    EXPR -> new type
Rule 28    EXPR -> isvoid EXPR
Rule 29    EXPR -> EXPR plus EXPR
Rule 30    EXPR -> EXPR minus EXPR
Rule 31    EXPR -> EXPR times EXPR
Rule 32    EXPR -> EXPR divide EXPR
Rule 33    EXPR -> tilde EXPR
Rule 34    EXPR -> EXPR lt EXPR
Rule 35    EXPR -> EXPR le EXPR
Rule 36    EXPR -> EXPR equals EXPR
Rule 37    EXPR -> not EXPR
Rule 38    EXPR -> lparen EXPR rparen
Rule 39    EXPR -> identifier
Rule 40    EXPR -> integer
Rule 41    EXPR -> string
Rule 42    EXPR -> true
Rule 43    EXPR -> false
Rule 44    FEATUREPLUS -> FEATURE semi
Rule 45    FEATUREPLUS -> FEATUREPLUS FEATURE semi
Rule 46    FORMALPLUS -> FORMAL
Rule 47    FORMALPLUS -> FORMALPLUS comma FORMAL
Rule 48    EXPRPLUS -> EXPR
Rule 49    EXPRPLUS -> EXPRPLUS comma EXPR
Rule 50    EXPRSEMIPLUS -> EXPR semi
Rule 51    EXPRSEMIPLUS -> EXPRSEMIPLUS EXPR semi
Rule 52    IDTYPEEXPRPLUS -> comma identifier colon type larrow EXPR
Rule 53    IDTYPEEXPRPLUS -> comma identifier colon type
Rule 54    IDTYPEEXPRPLUS -> IDTYPEEXPRPLUS comma identifier colon type larrow EXPR
Rule 55    IDTYPEEXPRPLUS -> IDTYPEEXPRPLUS comma identifier colon type
Rule 56    IDTYPEARROWPLUS -> identifier colon type rarrow EXPR semi
Rule 57    IDTYPEARROWPLUS -> IDTYPEARROWPLUS identifier colon type rarrow EXPR semi

Terminals, with rules where they appear

at                   : 13 14
case                 : 26
class                : 3 4 5 6
colon                : 7 8 9 10 11 22 23 24 25 52 53 54 55 56 57
comma                : 47 49 52 53 54 55
divide               : 32
dot                  : 13 14 15 16
else                 : 19
equals               : 36
error                : 
esac                 : 26
false                : 43
fi                   : 19
identifier           : 7 8 9 10 11 12 13 14 15 16 17 18 22 23 24 25 39 52 53 54 55 56 57
if                   : 19
in                   : 22 23 24 25
inherits             : 3 4
integer              : 40
isvoid               : 28
larrow               : 10 12 22 23 52 54
lbrace               : 3 4 5 6 7 8 21
le                   : 35
let                  : 22 23 24 25
loop                 : 20
lparen               : 7 8 13 14 15 16 17 18 38
lt                   : 34
minus                : 30
new                  : 27
not                  : 37
of                   : 26
plus                 : 29
pool                 : 20
rarrow               : 56 57
rbrace               : 3 4 5 6 7 8 21
rparen               : 7 8 13 14 15 16 17 18 38
semi                 : 1 2 44 45 50 51 56 57
string               : 41
then                 : 19
tilde                : 33
times                : 31
true                 : 42
type                 : 3 3 4 4 5 6 7 8 9 10 11 13 14 22 23 24 25 27 52 53 54 55 56 57
while                : 20

Nonterminals, with rules where they appear

CLASS                : 1 2
EXPR                 : 7 8 10 12 13 14 15 16 19 19 19 20 20 22 22 23 23 24 25 26 28 29 29 30 30 31 31 32 32 33 34 34 35 35 36 36 37 38 48 49 50 51 52 54 56 57
EXPRPLUS             : 13 15 17 49
EXPRSEMIPLUS         : 21 51
FEATURE              : 44 45
FEATUREPLUS          : 3 5 45
FORMAL               : 46 47
FORMALPLUS           : 7 47
IDTYPEARROWPLUS      : 26 57
IDTYPEEXPRPLUS       : 22 24 54 55
PROGRAM              : 2 0

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . CLASS semi
    (2) PROGRAM -> . PROGRAM CLASS semi
    (3) CLASS -> . class type inherits type lbrace FEATUREPLUS rbrace
    (4) CLASS -> . class type inherits type lbrace rbrace
    (5) CLASS -> . class type lbrace FEATUREPLUS rbrace
    (6) CLASS -> . class type lbrace rbrace

    class           shift and go to state 1

    PROGRAM                        shift and go to state 2
    CLASS                          shift and go to state 3

state 1

    (3) CLASS -> class . type inherits type lbrace FEATUREPLUS rbrace
    (4) CLASS -> class . type inherits type lbrace rbrace
    (5) CLASS -> class . type lbrace FEATUREPLUS rbrace
    (6) CLASS -> class . type lbrace rbrace

    type            shift and go to state 4


state 2

    (0) S' -> PROGRAM .
    (2) PROGRAM -> PROGRAM . CLASS semi
    (3) CLASS -> . class type inherits type lbrace FEATUREPLUS rbrace
    (4) CLASS -> . class type inherits type lbrace rbrace
    (5) CLASS -> . class type lbrace FEATUREPLUS rbrace
    (6) CLASS -> . class type lbrace rbrace

    class           shift and go to state 1

    CLASS                          shift and go to state 5

state 3

    (1) PROGRAM -> CLASS . semi

    semi            shift and go to state 6


state 4

    (3) CLASS -> class type . inherits type lbrace FEATUREPLUS rbrace
    (4) CLASS -> class type . inherits type lbrace rbrace
    (5) CLASS -> class type . lbrace FEATUREPLUS rbrace
    (6) CLASS -> class type . lbrace rbrace

    inherits        shift and go to state 7
    lbrace          shift and go to state 8


state 5

    (2) PROGRAM -> PROGRAM CLASS . semi

    semi            shift and go to state 9


state 6

    (1) PROGRAM -> CLASS semi .

    class           reduce using rule 1 (PROGRAM -> CLASS semi .)
    $end            reduce using rule 1 (PROGRAM -> CLASS semi .)


state 7

    (3) CLASS -> class type inherits . type lbrace FEATUREPLUS rbrace
    (4) CLASS -> class type inherits . type lbrace rbrace

    type            shift and go to state 10


state 8

    (5) CLASS -> class type lbrace . FEATUREPLUS rbrace
    (6) CLASS -> class type lbrace . rbrace
    (44) FEATUREPLUS -> . FEATURE semi
    (45) FEATUREPLUS -> . FEATUREPLUS FEATURE semi
    (7) FEATURE -> . identifier lparen FORMALPLUS rparen colon type lbrace EXPR rbrace
    (8) FEATURE -> . identifier lparen rparen colon type lbrace EXPR rbrace
    (9) FEATURE -> . identifier colon type
    (10) FEATURE -> . identifier colon type larrow EXPR

    rbrace          shift and go to state 11
    identifier      shift and go to state 14

    FEATUREPLUS                    shift and go to state 13
    FEATURE                        shift and go to state 12

state 9

    (2) PROGRAM -> PROGRAM CLASS semi .

    class           reduce using rule 2 (PROGRAM -> PROGRAM CLASS semi .)
    $end            reduce using rule 2 (PROGRAM -> PROGRAM CLASS semi .)


state 10

    (3) CLASS -> class type inherits type . lbrace FEATUREPLUS rbrace
    (4) CLASS -> class type inherits type . lbrace rbrace

    lbrace          shift and go to state 15


state 11

    (6) CLASS -> class type lbrace rbrace .

    semi            reduce using rule 6 (CLASS -> class type lbrace rbrace .)


state 12

    (44) FEATUREPLUS -> FEATURE . semi

    semi            shift and go to state 16


state 13

    (5) CLASS -> class type lbrace FEATUREPLUS . rbrace
    (45) FEATUREPLUS -> FEATUREPLUS . FEATURE semi
    (7) FEATURE -> . identifier lparen FORMALPLUS rparen colon type lbrace EXPR rbrace
    (8) FEATURE -> . identifier lparen rparen colon type lbrace EXPR rbrace
    (9) FEATURE -> . identifier colon type
    (10) FEATURE -> . identifier colon type larrow EXPR

    rbrace          shift and go to state 17
    identifier      shift and go to state 14

    FEATURE                        shift and go to state 18

state 14

    (7) FEATURE -> identifier . lparen FORMALPLUS rparen colon type lbrace EXPR rbrace
    (8) FEATURE -> identifier . lparen rparen colon type lbrace EXPR rbrace
    (9) FEATURE -> identifier . colon type
    (10) FEATURE -> identifier . colon type larrow EXPR

    lparen          shift and go to state 20
    colon           shift and go to state 19


state 15

    (3) CLASS -> class type inherits type lbrace . FEATUREPLUS rbrace
    (4) CLASS -> class type inherits type lbrace . rbrace
    (44) FEATUREPLUS -> . FEATURE semi
    (45) FEATUREPLUS -> . FEATUREPLUS FEATURE semi
    (7) FEATURE -> . identifier lparen FORMALPLUS rparen colon type lbrace EXPR rbrace
    (8) FEATURE -> . identifier lparen rparen colon type lbrace EXPR rbrace
    (9) FEATURE -> . identifier colon type
    (10) FEATURE -> . identifier colon type larrow EXPR

    rbrace          shift and go to state 21
    identifier      shift and go to state 14

    FEATUREPLUS                    shift and go to state 22
    FEATURE                        shift and go to state 12

state 16

    (44) FEATUREPLUS -> FEATURE semi .

    rbrace          reduce using rule 44 (FEATUREPLUS -> FEATURE semi .)
    identifier      reduce using rule 44 (FEATUREPLUS -> FEATURE semi .)


state 17

    (5) CLASS -> class type lbrace FEATUREPLUS rbrace .

    semi            reduce using rule 5 (CLASS -> class type lbrace FEATUREPLUS rbrace .)


state 18

    (45) FEATUREPLUS -> FEATUREPLUS FEATURE . semi

    semi            shift and go to state 23


state 19

    (9) FEATURE -> identifier colon . type
    (10) FEATURE -> identifier colon . type larrow EXPR

    type            shift and go to state 24


state 20

    (7) FEATURE -> identifier lparen . FORMALPLUS rparen colon type lbrace EXPR rbrace
    (8) FEATURE -> identifier lparen . rparen colon type lbrace EXPR rbrace
    (46) FORMALPLUS -> . FORMAL
    (47) FORMALPLUS -> . FORMALPLUS comma FORMAL
    (11) FORMAL -> . identifier colon type

    rparen          shift and go to state 25
    identifier      shift and go to state 27

    FORMAL                         shift and go to state 26
    FORMALPLUS                     shift and go to state 28

state 21

    (4) CLASS -> class type inherits type lbrace rbrace .

    semi            reduce using rule 4 (CLASS -> class type inherits type lbrace rbrace .)


state 22

    (3) CLASS -> class type inherits type lbrace FEATUREPLUS . rbrace
    (45) FEATUREPLUS -> FEATUREPLUS . FEATURE semi
    (7) FEATURE -> . identifier lparen FORMALPLUS rparen colon type lbrace EXPR rbrace
    (8) FEATURE -> . identifier lparen rparen colon type lbrace EXPR rbrace
    (9) FEATURE -> . identifier colon type
    (10) FEATURE -> . identifier colon type larrow EXPR

    rbrace          shift and go to state 29
    identifier      shift and go to state 14

    FEATURE                        shift and go to state 18

state 23

    (45) FEATUREPLUS -> FEATUREPLUS FEATURE semi .

    rbrace          reduce using rule 45 (FEATUREPLUS -> FEATUREPLUS FEATURE semi .)
    identifier      reduce using rule 45 (FEATUREPLUS -> FEATUREPLUS FEATURE semi .)


state 24

    (9) FEATURE -> identifier colon type .
    (10) FEATURE -> identifier colon type . larrow EXPR

    semi            reduce using rule 9 (FEATURE -> identifier colon type .)
    larrow          shift and go to state 30


state 25

    (8) FEATURE -> identifier lparen rparen . colon type lbrace EXPR rbrace

    colon           shift and go to state 31


state 26

    (46) FORMALPLUS -> FORMAL .

    rparen          reduce using rule 46 (FORMALPLUS -> FORMAL .)
    comma           reduce using rule 46 (FORMALPLUS -> FORMAL .)


state 27

    (11) FORMAL -> identifier . colon type

    colon           shift and go to state 32


state 28

    (7) FEATURE -> identifier lparen FORMALPLUS . rparen colon type lbrace EXPR rbrace
    (47) FORMALPLUS -> FORMALPLUS . comma FORMAL

    rparen          shift and go to state 33
    comma           shift and go to state 34


state 29

    (3) CLASS -> class type inherits type lbrace FEATUREPLUS rbrace .

    semi            reduce using rule 3 (CLASS -> class type inherits type lbrace FEATUREPLUS rbrace .)


state 30
